@@ -19,7 +19,6 @@
 package org.apache.pinot.query.runtime.function;
 
 import com.google.auto.service.AutoService;
-import java.util.Collections;
 import java.util.Map;
 import java.util.Set;
 import org.apache.pinot.common.function.PinotScalarFunction;
@@ -50,7 +49,7 @@ public class IsUuidUdf extends Udf {
 
   @Override
   public Map<UdfSignature, Set<UdfExample>> getExamples() {
-    return Collections.emptyMap();
+    return Map.of();
   }
 
   @Override
